--- a/FileDownloader/Base.lproj/Main.storyboard
+++ b/FileDownloader/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                                 </constraints>
                                 <color key="progressTintColor" red="0.019607843140000001" green="0.40000000000000002" blue="0.62352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </progressView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xFy-wY-Uh7">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noimage" translatesAutoresizingMaskIntoConstraints="NO" id="xFy-wY-Uh7">
                                 <rect key="frame" x="120.5" y="41" width="134" height="144"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="144" id="7Sb-ZJ-wYo"/>
@@ -292,4 +292,7 @@
             <point key="canvasLocation" x="1573.5999999999999" y="143.47826086956522"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="noimage" width="300" height="300"/>
+    </resources>
 </document>
