--- a/FileDownloader/Base.lproj/Main.storyboard
+++ b/FileDownloader/Base.lproj/Main.storyboard
@@ -34,9 +34,10 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1R3-a7-jJb">
-                                <rect key="frame" x="153" y="392" width="69" height="30"/>
+                                <rect key="frame" x="153" y="383" width="69" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="fg9-Y8-dT6"/>
+                                    <constraint firstAttribute="width" constant="69" id="b0S-9l-xxM"/>
+                                    <constraint firstAttribute="height" constant="30" id="lUm-73-Xuz"/>
                                 </constraints>
                                 <state key="normal" title="Download">
                                     <color key="titleColor" red="0.019607843140000001" green="0.40000000000000002" blue="0.62352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -52,13 +53,6 @@
                                 </constraints>
                                 <color key="progressTintColor" red="0.019607843140000001" green="0.40000000000000002" blue="0.62352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </progressView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noimage" translatesAutoresizingMaskIntoConstraints="NO" id="xFy-wY-Uh7">
-                                <rect key="frame" x="120.5" y="41" width="134" height="144"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="144" id="7Sb-ZJ-wYo"/>
-                                    <constraint firstAttribute="width" constant="134" id="HyN-lK-r35"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Xp-9J-lxG">
                                 <rect key="frame" x="305" y="626" width="54" height="21"/>
                                 <constraints>
@@ -69,22 +63,29 @@
                                 <color key="textColor" red="0.019607843140000001" green="0.40000000000000002" blue="0.62352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noimage" translatesAutoresizingMaskIntoConstraints="NO" id="xFy-wY-Uh7">
+                                <rect key="frame" x="136" y="70" width="102" height="114"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="114" id="1Bv-g0-mI2"/>
+                                    <constraint firstAttribute="width" constant="102" id="e7J-vI-Biy"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5Xp-9J-lxG" secondAttribute="bottom" constant="20" id="3CT-Pm-HwV"/>
-                            <constraint firstItem="cip-O0-ts1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="8zs-9h-4v0"/>
-                            <constraint firstItem="1R3-a7-jJb" firstAttribute="top" secondItem="cip-O0-ts1" secondAttribute="bottom" constant="33.5" id="C9t-6u-5vq"/>
-                            <constraint firstItem="1R3-a7-jJb" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="D7s-Ki-PhI"/>
+                            <constraint firstItem="1R3-a7-jJb" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="7dm-Zh-kpW"/>
+                            <constraint firstItem="xFy-wY-Uh7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="Ayl-Sl-fxV"/>
                             <constraint firstItem="ePm-E0-Hkq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="GHc-Sw-sum"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ePm-E0-Hkq" secondAttribute="bottom" constant="30" id="Hxm-9x-K8z"/>
-                            <constraint firstItem="xFy-wY-Uh7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="21" id="IeK-vu-YfE"/>
-                            <constraint firstItem="cip-O0-ts1" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Kd6-oC-XSm"/>
-                            <constraint firstItem="cip-O0-ts1" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="kRh-5s-Qln"/>
+                            <constraint firstItem="xFy-wY-Uh7" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="JTA-Ut-8L2"/>
+                            <constraint firstItem="1R3-a7-jJb" firstAttribute="top" secondItem="cip-O0-ts1" secondAttribute="bottom" constant="24.5" id="RTX-gO-Rs5"/>
+                            <constraint firstItem="cip-O0-ts1" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="Xgt-hQ-CuY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cip-O0-ts1" secondAttribute="trailing" constant="16" id="dc5-0l-Ddo"/>
+                            <constraint firstItem="cip-O0-ts1" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="eGu-Uw-nc4"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ePm-E0-Hkq" secondAttribute="trailing" constant="77" id="lHb-Xh-oSu"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5Xp-9J-lxG" secondAttribute="trailing" constant="16" id="lTk-AD-Sio"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cip-O0-ts1" secondAttribute="trailing" constant="16" id="ptr-nf-KrO"/>
-                            <constraint firstItem="xFy-wY-Uh7" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="rdN-Md-tbn"/>
+                            <constraint firstItem="cip-O0-ts1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="sLW-nT-Ajd"/>
                             <constraint firstItem="5Xp-9J-lxG" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" symbolic="YES" id="vXz-VK-gdf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -142,7 +143,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P0H-8v-jqX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="880" y="115"/>
+            <point key="canvasLocation" x="879.20000000000005" y="114.69265367316342"/>
         </scene>
         <!--WeatherVC-->
         <scene sceneID="zqo-11-qzf">
@@ -183,7 +184,7 @@
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </activityIndicatorView>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="WeatherCell" rowHeight="90" id="jYQ-8F-P5s" customClass="WeatherCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="WeatherCell" rowHeight="90" id="jYQ-8F-P5s" customClass="WeatherCell">
                                         <rect key="frame" x="0.0" y="28" width="375" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jYQ-8F-P5s" id="2fT-vB-OB1">
